Added extra links and cleaned up code

--- a/flask_app/templates/pie_derby.html
+++ b/flask_app/templates/pie_derby.html
@@ -11,6 +11,7 @@
 <body>
     <div class="dash_links">
         <a class="link-button" href="/pies">Pie Derby</a>
+        <a class="link-button" href="/">Dashboard</a>
         <a class="link-button" href="/logout">Logout</a>
     </div>
     <h1>PyPie Derby</h1>
