--- a/flask_app/templates/show_pie.html
+++ b/flask_app/templates/show_pie.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='pie_derby.css') }}">
 </head>
-<body>
+<body style="padding-top: 10% !important; background-color: plum;">
     <div class="dash_links">
         <a class="link-button" href="/pies">Pie Derby</a>
         <a class="link-button" href="/logout">Logout</a>
@@ -16,12 +16,12 @@
     <div class="pie_box">
         {% if pie %}
         <h1 class="headtext">{{pie.name}} by {{creator_first}}</h1>
-        <p class="text">
+        <p style="display: block;" class="text">
             {{pie.filling}} with a {{pie.crust}}
         </p>
         <p class="text">Cast a Vote</p>
         {% if user_voted == 1 %}
-        <a class="link1" href="/pie/unvote/{{pie.id}}">Yuck!</a>
+        <a class="link1" href="/pie/unvote/{{pie.id}}"> Take Back </a>
         {% else %}
         <a class="link2" href="/pie/vote/{{pie.id}}">Delicious</a>
         {% endif %}
