--- a/flask_app/templates/recipes_reg_log.html
+++ b/flask_app/templates/recipes_reg_log.html
@@ -7,19 +7,36 @@
     <title>Register_Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
-        .body{
-            display: flex;
+        * { 
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+        body{
+            background-image: url('../static/images/th(1).png');
+        }
+        #titleHolder{
+            background-color: royalblue;
+            padding: 1% 0;
+        }
+        .title{
+            text-align: center;
+            margin-top: 5%;
+            font-size: 5vw;
         }
         .content{
-            width: 50%;
-            box-sizing: border-box;
+            width: 49.5%;
+            padding: 10% 0;
+            margin: 0;
+            display: inline-flex;
         }
         .box{
-            background-color: lightgray;
-            width: 70%;
-            height: 700px;
-            margin: 10px 15%;
-            padding: 10px 15px;
+            background-color: darkgrey;
+            width: 90%;
+            height: auto;
+            margin: 0 5%;
+            padding: 10% 8% 5%;
+            border-radius: 10px;
         }
 
         #tooltip {
@@ -83,6 +100,9 @@
     </style>
 </head>
 <body class="body">
+    <div id="titleHolder">
+    <h1 class="title"> Welcome to the Pie Derby </h1>
+    <p style="text-align: center; font-size: 2vw;"> Please get your account settled to enter! </p></div>
     <div class="content">
         <div class="box">
             <form action="/register" method="POST">
@@ -130,7 +150,7 @@
     <div class="content">
         <div class="box">
             <form action="/login" method="POST">
-                <h2 style="color: green;">Login</h2>
+                <h2 style="color: darkgreen;">Login</h2>
 
                 {% with login = get_flashed_messages(category_filter=["login"]) %}
                     {% if login %}
@@ -148,9 +168,10 @@
                 <label for="password" class="col-sm-2 col-form-label">Password</label>
                 <input type="password" class="form-control" name="password">
 
-                <input style="background-color: green;" class="button" type="submit" value="Login">
+                <input style="background-color: darkgreen;" class="button" type="submit" value="Login">
                 </form>
         </div>
     </div>
+    <script src="../static/pie_derby.js"></script>
 </body>
 </html>
