--- a/flask_app/templates/pie_derby.html
+++ b/flask_app/templates/pie_derby.html
@@ -8,21 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='pie_derby.css') }}">
 </head>
-<body>
+<body style="background-image: url('../static/images/th(7).jpg')">
     <div class="dash_links">
-        <a class="link-button" href="/pies">Pie Derby</a>
         <a class="link-button" href="/">Dashboard</a>
         <a class="link-button" href="/logout">Logout</a>
     </div>
-    <h1>PyPie Derby</h1>
+    <div style="height: auto; background-color: peachpuff; padding: 5% 0 2% 4%; margin-bottom: 10%;">
+    <h1 >PyPie Derby</h1>
+    <p style="text-align: center; margin-top: 5%; font-size: 2vw;"> Take a look at our community of pie recipes! </p>
+    </div>
     <table class="table table-dark table-hover">
-        <tr>
+        <tr style="height: 80px !important; font-size: 2.5vw !important">
             <th>Name</th>
             <th>PyPie By</th>
             <th>Votes</th>
         </tr>
         {% for pie in pies %}
-        <tr>
+        <tr style="height: 60px; font-size: 1.75vw; text-align: center;">
             <td><a href="/show/{{pie.id}}/{{pie.user_first}}">{{pie.name}}</a></td>
             <td>{{pie.user_first}}</td>
             <td>{{pie.votes}}</td>
