--- a/flask_app/templates/edit_pie.html
+++ b/flask_app/templates/edit_pie.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='pie_derby.css') }}">
 </head>
-<body>
+<body style="background-image: url('../static/images/th(3).jpg')">
     <div class="dash_links">
         <a class="link-button" href="/pies">Pie Derby</a>
         <a class="link-button" href="/">Dashboard</a>
@@ -16,7 +16,7 @@
     </div>
     <div>
         {% if pie %}
-        <h1>Edit {{pie.name}}</h1>
+        <h1 style="margin-bottom: 5%; font-size: 4vw; ; border-radius: 5px; height: auto;  background-color: aqua; padding: 3% 0 2% 2%"> Edit your pie! </h1>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for message in messages %}
@@ -25,23 +25,25 @@
         {% endif %}
         {% endwith %}
         <form class="edit_form" action="/edit/{{pie.id}}/post" method="POST">
+            <h1 style="text-align: center;margin-bottom: 5%"> {{pie.name}} </h1>
+
             <label id="tooltip" for="name" class="form-label">Pie Name
             <span class="tooltiptext">2 letters or longer!</span>
             </label>
-            <input class="form-control" type="text" value="{{pie.name}}" name="name">
+            <input class="form-control" type="text" value="{{pie.name}}" name="name"><br/><br/><br/>
 
             <label id="tooltip" for="filling" class="form-label">Filling
             <span class="tooltiptext">2 letters or longer!</span>
             </label>
-            <input class="form-control" type="text" value="{{pie.filling}}" name="filling">
+            <input class="form-control" type="text" value="{{pie.filling}}" name="filling"><br/><br/><br/>
                 
             <label id="tooltip" for="crust" class="form-label">Crust Type
             <span class="tooltiptext">2 letters or longer!</span>
             </label>
-            <input class="form-control" type="text" value="{{pie.crust}}" name="crust">
+            <input class="form-control" type="text" value="{{pie.crust}}" name="crust"><br/><br/>
         {% endif %}
 
-            <input class="input" type="submit" value="Edit Pie">
+            <input style="margin: 0 25%" class="input" type="submit" value="Edit Pie">
         </form>
     </div>
 </body>
