--- a/flask_app/static/pie_derby.css
+++ b/flask_app/static/pie_derby.css
@@ -41,19 +41,21 @@
     .dash_links{
         position: absolute;
         right: 15%;
-        top: 15px;
+        top: 2%;
         display:flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         width: 30%;
     }
     body{
         box-sizing: border-box;
-        padding: 10%;
+        padding: 1% 10% 10%;
     }
-    .up_main{
+    .main{
         display: flex;
-        height: 500px;
-        column-gap: 10%;
+        height: auto;
+        margin: 0;
+        padding: 0;
+        column-gap: 5%;
     }
     .link-button{
         background-color: lightgray;
@@ -61,27 +63,45 @@
         border-radius: 10px;
         color: black;
         text-decoration: none;
-        padding: 3px;
+        text-align: center;
+        font-size: 1.5vw;
+        padding: 10px 0;
+        width: 30%;
+        box-shadow: 3px 2px black;
+    }
+    .link-button:hover{
+        background-color: darkgray;
     }
     .input{
         border-radius: 10px;
         position: relative;
         top: 20px;
+        width: 40%;
+    }
+    .input:hover{
+        background-color: darkgray;
     }
     .edit_form{
-    width: 60%;
+    width: 70%;
+    margin: 5% 15%;
+    border: 1.5px solid black;
+    box-shadow: 4px 3px black;
+    padding: 5% 5% 10%;
+    background-color: aqua;
     }
     .pie_box{
         width: 100%;
         height: 500px;
         margin: 30px 0px;
         border: 2px solid black;
+        box-shadow: 4px 3px black;
+        background-color: darkgrey;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
         position: relative;
-        padding: 25px;
+        padding: 5%;
     }
     .text{
         font-size: 25px;
@@ -94,15 +114,23 @@
     .link1, .link2{
         position: absolute;
         bottom: 30px;
-        width: 80px;
+        height: 50px;
+        padding: 1% 0;
+        font-size: 2vw;
         border: 1.5px solid gray;
         text-decoration: none;
         color: black;
         text-align: center;
     }
     .link1{
-        background-color: blue;
+        background-color: lightblue;
+        width: 20%;
+    }
+    .link1:hover{
+        color: red;
     }
     .link2{
         background-color: gray;
+        width: 30%;
+        
     }
